2003-07-27  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_threadpool.py: test existing work

	* twisted/python/threadpool.py: check for existing work in start()

2003-07-25  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/imap4.py: The fetch method of the IMailbox
	interface has been changed to accept only a MessageSet and a uid
	argument and to return an IMessage implementor.

2003-07-24  Brian Warner  <warner@lothar.com>

	* twisted/internet/cReactor/cDelayedCall.c: implement .active and
	.getTime methods

	* twisted/test/test_internet.py (InterfaceTestCase.wake): remove
	reactor.initThreads() call. This is a private method which is
	triggered internally by the current reactor when threadable.init
	is called. It does not need to be called independently, and not
	all reactors implement this particular method.

	* twisted/test/test_threads.py: shuffle test cases, add timeouts
	to avoid hanging tests. Added (disabled) test to trigger cReactor
	hang (but unfortunately it fails under the default reactor)

2003-07-23  Dave Peticolas  <dave@krondo.com>

	* twisted/internet/threads.py: avoid top-level reactor import

2003-07-23  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/imap4.py: The fetch method of the IMailbox
	interface has been changed to accept a list of (non-string)
	objects representing the requested message parts.  Less knowledge
	of the IMAP4 protocol should be required to properly implement
	the interface.

2003-07-23  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_enterprise.py: more tests

2003-07-21  Dave Peticolas  <dave@krondo.com>

	* twisted/internet/base.py: implement callWhenRunning

	* twisted/internet/interfaces.py: add callWhenRunning API

	* twisted/test/test_pop3.py: string in string only works in 2.3

2003-07-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7alpha3 (for form and twisted.names
	updates mentioned below).

2003-07-19  Ying Li <cyli@ai.mit.edu>
